--- a/app/src/main/res/layout/card_show_order_list.xml
+++ b/app/src/main/res/layout/card_show_order_list.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/menuName"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,10 +22,10 @@
         android:id="@+id/menuName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="128dp"
+        android:layout_marginStart="16dp"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/menuQuantity"
-        app:layout_constraintEnd_toStartOf="@+id/menuSubtotal"
         app:layout_constraintStart_toEndOf="@+id/menuQuantity"
         app:layout_constraintTop_toTopOf="@+id/menuQuantity" />
 
@@ -33,8 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/menuName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/menuName"
         app:layout_constraintTop_toTopOf="@+id/menuName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
