--- a/app/src/main/res/layout/dialog_quantity.xml
+++ b/app/src/main/res/layout/dialog_quantity.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Jumlah"
-            android:inputType="number" />
+            android:inputType="number"
+            android:text="1" />
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
