--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#80FF0000"
-        android:text="Cancel"
+        android:text="Batal"
         app:layout_constraintBottom_toBottomOf="@+id/confirmButton"
         app:layout_constraintEnd_toStartOf="@+id/optionButton"
         app:layout_constraintTop_toTopOf="@+id/confirmButton" />
